objects/L2O_Pricing_Table__c.object
<CustomObject>
    <description>Pricing table for maintaining the lease price</description>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Used for Copado Data Deployment via ADO</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2O_Lease_Price__c</fullName>
        <description>Product renewable price</description>
        <inlineHelpText>Product renewable price</inlineHelpText>
        <label>Lease Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Lower_Bound__c</fullName>
        <label>Lower Bound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product_Code__c</fullName>
        <formula>L2O_Parent_Product__r.ProductCode</formula>
        <label>Parent Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Parent_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Pricing Tables (Parent Product)</relationshipLabel>
        <relationshipName>Pricing_Tables1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Product_Code__c</fullName>
        <description>Code for renewable product</description>
        <formula>L2O_Product__r.ProductCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Code for renewable product</inlineHelpText>
        <label>Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Product_Name__c</fullName>
        <description>Name for renewable product</description>
        <formula>L2O_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Name for renewable product</inlineHelpText>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2O_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product reference field</description>
        <inlineHelpText>Product reference field</inlineHelpText>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Pricing_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>L2O_Purchase_Price__c</fullName>
        <label>Purchase Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2O_Upper_Bound__c</fullName>
        <label>Upper Bound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Pricing Table</label>
    <nameField>
        <label>Pricing Table Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Tables</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>